--- a/index.html
+++ b/index.html
@@ -113,7 +113,12 @@
         </div>
       </div>
     </header>
+    <!-- header section end......................... -->
 
-    <main class="main"></main>
+    <!-- main section start.......................... -->
+
+    <main class="main">
+      
+    </main>
   </body>
 </html>
