--- a/index.html
+++ b/index.html
@@ -118,7 +118,27 @@
     <!-- main section start.......................... -->
 
     <main class="main">
-      
+      <section class="hero-section">
+        <div class="hero-content">
+          <h1>
+            Where developers <br />
+            are doing their best work.
+          </h1>
+          <div class="hero-buttons">
+            <button class="btn-1">
+              <i class="fa-brands fa-windows"></i>Download for Windows
+            </button>
+            <button class="btn-2">Explore Features</button>
+          </div>
+          <div class="hero-para">
+            <div class="para-point"></div>
+            <p>
+              Windsurf is the most intuitive Al coding experience, built to keep
+              you-and your team-in flow.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- main section end.......................... -->
