--- a/index.html
+++ b/index.html
@@ -21,95 +21,119 @@
           alt="windsurf-logo"
           class="img-logo"
         />
+
+        <img
+          class="mobile-logo"
+          src="https://windsurf.com/logo/windsurf-white-symbol.svg"
+          alt="Windsurf logo"
+        />
       </a>
 
       <nav>
-        <a href="/" class="link-1">
-          PRODUCTS
-          <i class="fa-solid fa-angle-down"></i>
-          <div class="box-1">
-            <div class="box-1-left">
-              <h3>Products</h3>
-              <span>
-                <span>Windsurf Editor</span>
-                <p>The most powerful AI IDE</p>
-              </span>
-              <span
-                ><span>JetBrains Plugin</span>
-                <p>Cascade in your JetBrains IDE</p>
-              </span>
-            </div>
+        <div class="hover-class">
+          <a href="/" class="link-1">
+            PRODUCTS
+            <i class="fa-solid fa-angle-down"></i>
+            <div class="box-1">
+              <div class="box-1-left">
+                <h3>Products</h3>
+                <span>
+                  <span>Windsurf Editor</span>
+                  <p>The most powerful AI IDE</p>
+                </span>
+                <span
+                  ><span>JetBrains Plugin</span>
+                  <p>Cascade in your JetBrains IDE</p>
+                </span>
+              </div>
 
-            <div class="box-1-right">
-              <h3>Core Features</h3>
-              <span
-                ><span>Cascade</span>
-                <p>Agentic chat experience</p>
-              </span>
-              <span
-                ><span>Tab</span>
-                <p>More than just autocomplete</p>
-              </span>
+              <div class="box-1-right">
+                <h3>Core Features</h3>
+                <span
+                  ><span>Cascade</span>
+                  <p>Agentic chat experience</p>
+                </span>
+                <span
+                  ><span>Tab</span>
+                  <p>More than just autocomplete</p>
+                </span>
+              </div>
             </div>
-          </div>
-        </a>
+          </a>
+        </div>
 
-        <a href="/" class="link-2"
-          >ENTERPRISE <i class="fa-solid fa-angle-down"></i>
-          <div class="box-2">
-            <div class="box-2-left">
-              <span>
-                <span>Windsurf for Enterprise</span>
-                <p>Power your enterprise with Windsurf</p>
-              </span>
-              <span
-                ><span>Windsurf for Government</span>
-                <p>FedRAMP High, DoD IL5, and ITAR Compliance</p>
-              </span>
-            </div>
-          </div></a
-        >
-        <a href="/">PRICING</a>
-        <a href="/">BLOG</a>
-        <a href="/" class="link-3"
-          >RESOURCES<i class="fa-solid fa-angle-down"></i>
+        <div class="hover-class">
+          <a href="/" class="link-2"
+            >ENTERPRISE <i class="fa-solid fa-angle-down"></i>
+            <div class="box-2">
+              <div class="box-2-left">
+                <span>
+                  <span>Windsurf for Enterprise</span>
+                  <p>Power your enterprise with Windsurf</p>
+                </span>
+                <span
+                  ><span>Windsurf for Government</span>
+                  <p>FedRAMP High, DoD IL5, and ITAR Compliance</p>
+                </span>
+              </div>
+            </div></a
+          >
+        </div>
 
-          <div class="box-3">
-            <div class="box-3-left">
-              <p>Changelog</p>
-              <p>Docs</p>
-              <p>Upcoming Events</p>
-              <p>University</p>
-              <p>Feature Requests</p>
-              <p>Windsurf vs Cursor</p>
-              <p>Windsurf vs Copilot</p>
-              <p>2025 Gartner Magic Quadrant</p>
-            </div>
-          </div>
-        </a>
-        <a href="/" class="link-4"
-          >COMPANY <i class="fa-solid fa-angle-down"></i>
+        <div class="hover-class">
+          <a href="/">PRICING</a>
+        </div>
+        <div class="hover-class">
+          <a href="/">BLOG</a>
+        </div>
 
-          <div class="box-4">
-            <div class="box-4-left">
-              <p>About Us</p>
-              <p>Contact</p>
-              <p>Support</p>
-              <p>Community</p>
-              <p>Careers</p>
-              <p>Security</p>
-              <p>Partnerships</p>
+        <div class="hover-class">
+          <a href="/" class="link-3"
+            >RESOURCES<i class="fa-solid fa-angle-down"></i>
+
+            <div class="box-3">
+              <div class="box-3-left">
+                <p>Changelog</p>
+                <p>Docs</p>
+                <p>Upcoming Events</p>
+                <p>University</p>
+                <p>Feature Requests</p>
+                <p>Windsurf vs Cursor</p>
+                <p>Windsurf vs Copilot</p>
+                <p>2025 Gartner Magic Quadrant</p>
+              </div>
             </div>
-          </div>
-        </a>
+          </a>
+        </div>
+        <div class="hover-class">
+          <a href="/" class="link-4"
+            >COMPANY <i class="fa-solid fa-angle-down"></i>
+
+            <div class="box-4">
+              <div class="box-4-left">
+                <p>About Us</p>
+                <p>Contact</p>
+                <p>Support</p>
+                <p>Community</p>
+                <p>Careers</p>
+                <p>Security</p>
+                <p>Partnerships</p>
+              </div>
+            </div>
+          </a>
+        </div>
       </nav>
 
       <div class="header-right">
         <div class="user-logo-border">
-          <a hre="/" class="user-logo"><i class="fa-regular fa-user"></i></a>
+          <a href="/" class="user-logo"><i class="fa-regular fa-user"></i></a>
         </div>
         <div class="download-bg">
           <a href="/" class="download-btn"> Download </a>
+        </div>
+
+        <div class="mobile-options">
+          <i class="fa-solid fa-bars"></i>
         </div>
       </div>
     </header>
@@ -125,10 +149,10 @@
             are doing their best work.
           </h1>
           <div class="hero-buttons">
-            <button class="btn-1">
+            <button class="btn-1 button">
               <i class="fa-brands fa-windows"></i>Download for Windows
             </button>
-            <button class="btn-2">Explore Features</button>
+            <a href="#" class="btn-2 button">Explore Features</a>
           </div>
           <div class="hero-para">
             <div class="para-point"></div>
