--- a/index.html
+++ b/index.html
@@ -163,6 +163,48 @@
           </div>
         </div>
       </section>
+
+      <!-- marquee section start.................... -->
+
+      <section class="marquee-section">
+        <div class="marquee-content">
+          <img src="images/svg-1.svg" alt="" />
+          <img src="images/svg-2.svg" alt="" />
+          <img src="images/svg-3.svg" alt="" />
+          <img src="images/svg-5.svg" alt="" />
+
+          <img src="images/svg-1.svg" alt="" />
+          <img src="images/svg-2.svg" alt="" />
+          <img src="images/svg-3.svg" alt="" />
+          <img src="images/svg-5.svg" alt="" />
+
+          <img src="images/svg-1.svg" alt="" />
+          <img src="images/svg-2.svg" alt="" />
+          <img src="images/svg-3.svg" alt="" />
+          <img src="images/svg-5.svg" alt="" />
+
+          <img src="images/svg-1.svg" alt="" />
+          <img src="images/svg-2.svg" alt="" />
+          <img src="images/svg-3.svg" alt="" />
+          <img src="images/svg-5.svg" alt="" />
+
+          <img src="images/svg-1.svg" alt="" />
+          <img src="images/svg-2.svg" alt="" />
+          <img src="images/svg-3.svg" alt="" />
+          <img src="images/svg-5.svg" alt="" />
+
+          <img src="images/svg-1.svg" alt="" />
+          <img src="images/svg-2.svg" alt="" />
+          <img src="images/svg-3.svg" alt="" />
+          <img src="images/svg-5.svg" alt="" />
+        </div>
+      </section>
+
+      <section class="section-3">
+        
+      </section>
+
+      <!-- marquee section end ..................... -->
     </main>
 
     <!-- main section end.......................... -->
